--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form  (ngSubmit)="onSubmit()">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <input type="text" formControlName="cpf" placeholder="CPF">
     </div>
