--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form  (ngSubmit)="onSubmit()">
+  <form  [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <input type="text" formControlName="cpf" placeholder="CPF">
     </div>
