--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,18 @@
-
+<!-- 
 <div class="landing-container"> 
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
-</div>
+</div> -->
+
+<ng-container *ngIf="shouldShowMenu; else content">
+  <div class="layout-wrapper">
+    <app-sidebar></app-sidebar>
+    <div class="layout-content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</ng-container>
+<ng-template #content>
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</ng-template>
