--- a/src/app/racas/list/racas.component.html
+++ b/src/app/racas/list/racas.component.html
@@ -29,6 +29,12 @@
           </td>
         </tr>
       </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="5">Não há dados.</td>
+        </tr>
+    </ng-template>
     </p-table>
+    
   </div>
 </div>
