--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,10 +3,20 @@
   
   <div class="stats-container">
     <div class="stats-card">
+      <div class="card-wrapper red">
+        <p-card>
+          <div class="stat-content">
+            <div class="stat-value">{{ info?.numClientes}}</div>
+            <div class="stat-label">Clientes Cadastrados</div>
+          </div>
+        </p-card>
+      </div>
+    </div>
+    <div class="stats-card">
       <div class="card-wrapper teal">
         <p-card>
           <div class="stat-content">
-            <div class="stat-value">150</div>
+            <div class="stat-value">{{ info?.numPets}}</div>
             <div class="stat-label">Pets Cadastrados</div>
           </div>
         </p-card>
@@ -17,7 +27,7 @@
       <div class="card-wrapper blue">
         <p-card>
           <div class="stat-content">
-            <div class="stat-value">545</div>
+            <div class="stat-value">{{ info?.numRacas}}</div>
             <div class="stat-label">Raças cadastradas</div>
           </div>
         </p-card>
@@ -28,7 +38,7 @@
       <div class="card-wrapper green">
         <p-card>
           <div class="stat-content">
-            <div class="stat-value">1,322</div>
+            <div class="stat-value">{{ info?.numAtendimentos}}</div>
             <div class="stat-label">Atendimentos Realizados</div>
           </div>
         </p-card>
@@ -39,7 +49,7 @@
       <div class="card-wrapper yellow">
         <p-card>
           <div class="stat-content">
-            <div class="stat-value">44,300.00</div>
+            <div class="stat-value">{{ (info?.valorArrecadado ? info?.valorArrecadado : 0) | currency:'BRL' }} </div>
             <div class="stat-label">Valor Total de Atendimentos</div>
           </div>
         </p-card>
