--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -18,6 +18,9 @@
 .card-wrapper.teal ::ng-deep .p-card {
   background-color: #00bcd4;
 }
+.card-wrapper.red ::ng-deep .p-card {
+  background-color: #ff0000;
+}
 .card-wrapper.blue ::ng-deep .p-card {
   background-color: #2196f3;
 }
