--- a/src/app/atendimentos/list/list.component.html
+++ b/src/app/atendimentos/list/list.component.html
@@ -1,7 +1,7 @@
 <p-confirmDialog></p-confirmDialog>
 <div class="dashboard">
   <div class="header">
-    <h1>Pets</h1>
+    <h1>Atendimentos</h1>
     <p-button label="Cadastre um Novo" icon="fa-solid fa-plus" severity="primary" (click)="cadastrar()"></p-button>
   </div>
   <div class="card">
@@ -14,19 +14,23 @@
     >
       <ng-template pTemplate="header">
         <tr>
-          <th style="width: 20%; text-align: center">ID</th>
-          <th style="width: 20%; text-align: center">Nome</th>
-          <th style="width: 20%; text-align: center">Data Nascimento</th>
-          <th style="width: 20%; text-align: center">Nome Tutor</th>
+          <th style="width: 10%; text-align: center">ID</th>
+          <th style="width: 20%; text-align: center">Descrição</th>
+          <th style="width: 10%; text-align: center">Valor</th>
+          <th style="width: 20%; text-align: center">Data Atendimento</th>
+          <th style="width: 20%; text-align: center">Pet</th>
+          <th style="width: 20%; text-align: center">Tutor</th>
           <th style="width: 20%; text-align: center">Ações</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-item>
         <tr>
           <td class="text-align">{{ item.id }}</td>
-          <td class="text-align">{{ item.nome }}</td>
-          <td class="text-align">{{ item.dataNascimento | date:'dd/MM/yyyy' }}</td>
-          <td class="text-align">{{ item.cliente.usuario.nome }}</td>
+          <td class="text-align">{{ item.descricao }}</td>
+          <td class="text-align">{{ item.valor | currency:'BRL' }}</td>
+          <td class="text-align">{{ item.data | date:'dd/MM/yyyy' }}</td>
+          <td class="text-align">{{ item.pet.nome }}</td>
+          <td class="text-align">{{ item.pet.cliente.usuario.nome }}</td>
           <td class="text-align btn-wrapper">
             <p-button icon="fa-solid fa-pen" severity="success" (click)="editar(item.id)"/>
             <p-button icon="fa-solid fa-remove" severity="danger" (onClick)="deleteItem(item)"/>
