--- a/src/app/atendimentos/cadastro-atendimentos/cadastro-atendimentos.component.html
+++ b/src/app/atendimentos/cadastro-atendimentos/cadastro-atendimentos.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div class="dashboard">
   <div class="header">
     <h1>{{ id ? "Editar Atendimento" : "Cadastro de Atendimentos" }}</h1>
