--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="dashboard">
   <h1>Dashboard</h1>
+  <h4>{{ 'Bem-vindo, ' + nome }}</h4>
+  
   
   <div class="stats-container">
     <div class="stats-card">
