--- a/src/app/pets/cadastro-pets/cadastro-pets.component.html
+++ b/src/app/pets/cadastro-pets/cadastro-pets.component.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="p-fluid">
+      <div class="p-fluid" *appHasHole="'Admin'">
         <div class="p-field">
           <label for="cliente">Cliente</label>
           <p-dropdown
