--- a/src/app/atendimentos/list/list.component.html
+++ b/src/app/atendimentos/list/list.component.html
@@ -3,47 +3,24 @@
 <div class="dashboard">
   <div class="header">
     <h1>Atendimentos</h1>
-    <p-button label="Cadastre um Novo" icon="fa-solid fa-plus" severity="primary" (click)="cadastrar()" *ngIf="authService.isAdmin()"></p-button>
+    <ng-container>
+      <p-button
+        label="Cadastre um Novo"
+        icon="fa-solid fa-plus"
+        severity="primary"
+        (click)="cadastrar()"
+      ></p-button>
+    </ng-container>
   </div>
   <div class="card">
-    <p-table
-      [value]="items"
-      [paginator]="true"
+    <app-tabela-padrao
+      [items]="items"
+      [columns]="colunas"
       [rows]="5"
-      [tableStyle]="{ 'min-width': '50rem' }"
+      [tableMinWidth]="'50rem'"
       [rowsPerPageOptions]="[5, 10, 20]"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th style="width: 10%; text-align: center">ID</th>
-          <th style="width: 20%; text-align: center">Descrição</th>
-          <th style="width: 10%; text-align: center">Valor</th>
-          <th style="width: 20%; text-align: center">Data Atendimento</th>
-          <th style="width: 20%; text-align: center">Pet</th>
-          <th style="width: 20%; text-align: center">Tutor</th>
-          <th style="width: 20%; text-align: center">Ações</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-item>
-        <tr>
-          <td class="text-align">{{ item.id }}</td>
-          <td class="text-align">{{ item.descricao }}</td>
-          <td class="text-align">{{ item.valor | currency:'BRL' }}</td>
-          <td class="text-align">{{ item.data | date:'dd/MM/yyyy' }}</td>
-          <td class="text-align">{{ item.pet.nome }}</td>
-          <td class="text-align">{{ item.pet.cliente.usuario.nome }}</td>
-          <td class="text-align btn-wrapper">
-            <p-button icon="fa-solid fa-pen" severity="success" (click)="editar(item.id)"/>
-            <p-button icon="fa-solid fa-remove" severity="danger" (onClick)="deleteItem(item)"/>
-          </td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="emptymessage">
-        <tr>
-            <td colspan="12">Não há dados.</td>
-        </tr>
-    </ng-template>
-    </p-table>
-    
+      (edit)="editar($event)"
+      (delete)="deleteItem($event)"
+    ></app-tabela-padrao>
   </div>
 </div>
